--- a/AI_Assignment2.ipynb
+++ b/AI_Assignment2.ipynb
@@ -6,6 +6,7 @@
       "name": "AI_Assignment2.ipynb",
       "version": "0.3.2",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,11 +68,11 @@
       "metadata": {
         "id": "dzaobkAO6Q1K",
         "colab_type": "code",
-        "outputId": "96f8c76c-b5f8-4470-9535-17749a53f2de",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        }
+        },
+        "outputId": "16feb3d3-a657-484a-eb46-76f86f5cde91"
       },
       "cell_type": "code",
       "source": [
@@ -82,7 +83,7 @@
         "\n",
         "print(f'{a}<->{b} = {dist(a,b)}\\n{a}<->{c} = {dist(a,c)}')"
       ],
-      "execution_count": 0,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -176,17 +177,76 @@
     },
     {
       "metadata": {
-        "id": "PoFM96zv6Y-a",
+        "id": "SsLhEfjhS9gF",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 289
+        },
+        "outputId": "1d0ea4c8-ba66-4cf9-ab34-59d71bdb9c05"
       },
       "cell_type": "code",
       "source": [
-        "def get_path():\n",
-        "  "
+        "class node():\n",
+        "  file = open('5x5maze.txt', 'r')\n",
+        "  lines = file.readlines()\n",
+        "  \n",
+        "  def cleanlist(lines):\n",
+        "      for y in lines:  # technically don't need because we have create only 1 line now\n",
+        "          array = list(y)\n",
+        "          for val in array:\n",
+        "              if val == (','):\n",
+        "                  array.remove(val)\n",
+        "      lines = array\n",
+        "      maze = []\n",
+        "      tempmaze = []\n",
+        "      for x in range(0, 25):\n",
+        "          tempmaze.append(lines[x])\n",
+        "          if (x == 4 or x == 9 or x == 14 or x == 19 or x == 24):  # needs to be changed\n",
+        "              print(x)\n",
+        "              maze.append(tempmaze)\n",
+        "              tempmaze = []\n",
+        "      return maze\n",
+        "      # scans the maze file for 'P'and '*' returns (row, col)\n",
+        "      \n",
+        "  Maze = (cleanlist(lines))  # GLOBAL VARIABLE\n",
+        "       \n",
+        "  def printmaze(Maze):\n",
+        "    length = len(Maze)  # GLOBAL VARIABLE\n",
+        "    for x in range(length):\n",
+        "        print('\\n')\n",
+        "        for y in range(length):\n",
+        "            print(Maze[x][y], end=\" \")\n",
+        "            \n",
+        " \n",
+        "  printmaze(Maze)\n",
+        "                "
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "4\n",
+            "9\n",
+            "14\n",
+            "19\n",
+            "24\n",
+            "\n",
+            "\n",
+            "B _ _ R O \n",
+            "\n",
+            "_ _ _ Y _ \n",
+            "\n",
+            "_ _ Y _ _ \n",
+            "\n",
+            "_ R O _ G \n",
+            "\n",
+            "_ B G _ _ "
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
