--- a/AI_Assignment2.ipynb
+++ b/AI_Assignment2.ipynb
@@ -68,11 +68,11 @@
       "metadata": {
         "id": "dzaobkAO6Q1K",
         "colab_type": "code",
+        "outputId": "b8b0c9e9-8c10-4447-cef2-8507460ec062",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "16feb3d3-a657-484a-eb46-76f86f5cde91"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -83,7 +83,7 @@
         "\n",
         "print(f'{a}<->{b} = {dist(a,b)}\\n{a}<->{c} = {dist(a,c)}')"
       ],
-      "execution_count": 7,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
@@ -94,6 +94,53 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "metadata": {
+        "id": "SZM1_JFG-KqP",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "class Maze():\n",
+        "    def __init__(self, file_name ):\n",
+        "        self.name = file_name.replace('.txt', '')\n",
+        "        self.maze = self.load_maze(file_name)\n",
+        "        \n",
+        "    def _maze(self):\n",
+        "        return self.maze\n",
+        "    \n",
+        "    #saves the search results of the maze to a text file\n",
+        "    def save_maze(self, bot):\n",
+        "        maze_csv = self.maze.to_csv(index=False, header=False).replace(',','')\n",
+        "        with open(f'{self.name} - {str(bot)[10:13]} search results.txt', 'w') as f:\n",
+        "            f.writelines(maze_csv) \n",
+        "    \n",
+        "    #read file and convert text to pandas dataframe\n",
+        "    def load_maze(self, file_name):\n",
+        "        maze = defaultdict(list)\n",
+        "        with open(f'{file_name}') as f:\n",
+        "            lines=f.readlines()\n",
+        "            for row,line in enumerate(lines):\n",
+        "                for col, char in enumerate(line):\n",
+        "                     maze[col].append(char) \n",
+        "        del maze[list(maze.keys())[-1]]\n",
+        "        return pd.DataFrame(maze, dtype=str)\n",
+        "    \n",
+        "    \n",
+        "    #converts the path to the goal into exclamation marks and saves the file\n",
+        "    def print_solution(self,path,bot):\n",
+        "        for location in path:\n",
+        "            #if != color put color?\n",
+        "            if  self.maze.iloc[location[0]][location[1]] != 'P' and self.maze.iloc[location[0]][location[1]] != '*':\n",
+        "                self.maze.iloc[location[0]][location[1]] = '!'\n",
+        "        maze_csv = self.maze.to_csv(index=False, header=False).replace(',','')\n",
+        "        with open(f'{self.name} - {str(bot)[10:13]} solution.txt', 'w') as f:\n",
+        "            f.writelines(maze_csv) "
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
@@ -132,7 +179,8 @@
         "        actions = []\n",
         "        for i in range(-1,2):\n",
         "            for j in range(-1,2):\n",
-        "                if abs(i+j) ==1  and self.maze.maze.iloc[self.pos[0]+i][self.pos[1]+j] != '%':\n",
+        "                #changed \"%\" (wall) to \"_\" (open space)\n",
+        "                if abs(i+j) ==1  and self.maze.maze.iloc[self.pos[0]+i][self.pos[1]+j] != '_':\n",
         "                    actions.append((self.pos[0]+i, self.pos[1]+j))        \n",
         "                    \n",
         "        return actions\n",
@@ -177,13 +225,207 @@
     },
     {
       "metadata": {
-        "id": "SsLhEfjhS9gF",
+        "id": "iENG_UhRAE30",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "m = Maze('5x5maze.txt')\n",
+        "agent = Agent(m) #constructor uses an algorithm and a maze"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "kKq7-9OqC5m_",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 289
+          "height": 102
         },
-        "outputId": "1d0ea4c8-ba66-4cf9-ab34-59d71bdb9c05"
+        "outputId": "c97b2986-0c2b-467b-857a-f348ca7d8201"
+      },
+      "cell_type": "code",
+      "source": [
+        "maze_obj = Maze('5x5maze.txt')\n",
+        "print(f'{maze_obj.name}\\n{maze_obj.maze}')"
+      ],
+      "execution_count": 149,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "5x5maze\n",
+            "  0  1  2  3  4  5  6  7  8  9  ... 18 19 20 21 22 23 24 25 26 27\n",
+            "0  B  _  _  R  O  ,  _  _  _  Y ...  _  R  O  _  G  ,  _  B  G  _\n",
+            "\n",
+            "[1 rows x 28 columns]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "Au0Ii-9GAeuR",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "727dc616-34a5-4daa-ff25-56e7f259e152"
+      },
+      "cell_type": "code",
+      "source": [
+        "agent.get_location_of_('B')"
+      ],
+      "execution_count": 139,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(0, 0)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 139
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "mUmfIW-RDVXG",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "f03757ba-98c8-4a85-b233-10b4b7ee798b"
+      },
+      "cell_type": "code",
+      "source": [
+        "agent.get_location_of_('R')"
+      ],
+      "execution_count": 132,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(0, 3)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 132
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "LI9--W8ZDVM6",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "a1883f4d-601c-422b-b5db-dfc8f38f5d8f"
+      },
+      "cell_type": "code",
+      "source": [
+        "agent.get_location_of_('O')"
+      ],
+      "execution_count": 133,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(0, 4)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 133
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "xNqbY8GODU9g",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "f6ad7dbf-fd73-4269-9696-e3d24027d349"
+      },
+      "cell_type": "code",
+      "source": [
+        "agent.get_location_of_('Y')"
+      ],
+      "execution_count": 134,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(0, 9)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 134
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "7PoPtZroDUx1",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "91e14e65-a387-479a-c65b-dd6ada6812d5"
+      },
+      "cell_type": "code",
+      "source": [
+        "agent.get_location_of_('G')"
+      ],
+      "execution_count": 135,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(0, 22)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 135
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "SsLhEfjhS9gF",
+        "colab_type": "code",
+        "outputId": "6e82ad98-19e9-4fde-82eb-71006e3e3f3d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 623
+        }
       },
       "cell_type": "code",
       "source": [
@@ -207,7 +449,7 @@
         "              maze.append(tempmaze)\n",
         "              tempmaze = []\n",
         "      return maze\n",
-        "      # scans the maze file for 'P'and '*' returns (row, col)\n",
+        "      \n",
         "      \n",
         "  Maze = (cleanlist(lines))  # GLOBAL VARIABLE\n",
         "       \n",
@@ -217,12 +459,13 @@
         "        print('\\n')\n",
         "        for y in range(length):\n",
         "            print(Maze[x][y], end=\" \")\n",
-        "            \n",
+        "            print(Maze[x][y].index('B'))\n",
         " \n",
         "  printmaze(Maze)\n",
+        "  \n",
         "                "
       ],
-      "execution_count": 40,
+      "execution_count": 91,
       "outputs": [
         {
           "output_type": "stream",
@@ -234,19 +477,38 @@
             "24\n",
             "\n",
             "\n",
-            "B _ _ R O \n",
-            "\n",
-            "_ _ _ Y _ \n",
-            "\n",
-            "_ _ Y _ _ \n",
-            "\n",
-            "_ R O _ G \n",
-            "\n",
-            "_ B G _ _ "
+            "B 0\n",
+            "_ "
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-91-9ec7c9840027>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mnode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m   \u001b[0mfile\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'5x5maze.txt'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m   \u001b[0mlines\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreadlines\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0mcleanlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlines\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-91-9ec7c9840027>\u001b[0m in \u001b[0;36mnode\u001b[0;34m()\u001b[0m\n\u001b[1;32m     31\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mMaze\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'B'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m   \u001b[0mprintmaze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mMaze\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-91-9ec7c9840027>\u001b[0m in \u001b[0;36mprintmaze\u001b[0;34m(Maze)\u001b[0m\n\u001b[1;32m     29\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0my\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlength\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mMaze\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\" \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 31\u001b[0;31m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mMaze\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'B'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     32\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m   \u001b[0mprintmaze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mMaze\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: substring not found"
+          ]
         }
       ]
+    },
+    {
+      "metadata": {
+        "id": "bFAUn65g2oPd",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "Agent.get_state('B')"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
